[gd_scene load_steps=10 format=3 uid="uid://br5usnc3aulv3"]

[ext_resource type="Theme" uid="uid://bel3c3184om4i" path="res://barkley2/themes/debug/gun_debug.tres" id="1_qgmft"]
[ext_resource type="Script" uid="uid://d08c81ivja78i" path="res://barkley2/rooms/_debug/secret_breeding_place/material_debug_box.gd" id="2_h6178"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="3_s7o6m"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="4_1uij0"]
[ext_resource type="FontFile" uid="uid://bq5ct8srd86o6" path="res://barkley2/resources/fonts/fn5o.tres" id="5_jpvrc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgmft"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1cu0i"]
font = ExtResource("3_s7o6m")

[sub_resource type="LabelSettings" id="LabelSettings_cm3ux"]
font = ExtResource("4_1uij0")

[sub_resource type="LabelSettings" id="LabelSettings_mg56c"]
font = ExtResource("5_jpvrc")

[node name="material_box" type="PanelContainer"]
custom_minimum_size = Vector2(50, 50)
offset_right = 50.0
offset_bottom = 50.0
theme = ExtResource("1_qgmft")
theme_override_styles/panel = SubResource("StyleBoxFlat_qgmft")
script = ExtResource("2_h6178")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="weight_lbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "69"
label_settings = SubResource("LabelSettings_1cu0i")

[node name="eletron_lbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "69"
label_settings = SubResource("LabelSettings_cm3ux")

[node name="name_lbl" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "placeholder"
label_settings = SubResource("LabelSettings_mg56c")
autowrap_mode = 1
